# Copyright (C) 2018 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//tools/build:rules.bzl", "cc_copts", "apic_template", "cc_stripped_binary")

apic_template(
    name = "vk_templated_api",
    api = "//gapis/api/vulkan:api",
    templates = [
        "//gapis/api/templates:replay_api.h",
        "//gapis/api/templates:replay_api.cpp",
        "//gapis/api/vulkan/templates:vk_replay_helpers.cpp",
    ],
)

apic_template(
    name = "vk_templated",
    api = "//gapis/api/vulkan:api",
    templates = [
        "//gapis/api/templates:replay_types.h",
        "//gapis/api/templates:replay_mutate.cpp",
        "//gapis/api/templates:replay_mutate.h",
        "//gapis/api/templates:replay_types.cpp",
        "//gapis/api/templates:replay_imports.h",
    ],
)

cc_proto_library(
    name = "descriptor_cc_proto",
    visibility = ["//visibility:public"],
    deps =[
        "@com_google_protobuf//:descriptor_proto"
    ],
)

cc_stripped_binary(
    name = "read_pack_cpp",
    srcs = [
        "helpers.h",
        "helpers2.h",
        "helpers.cpp",
        "main.cpp",
        "extras.cpp",
        "helpers3.cpp",
        "helpers3.h",
        "override.cpp",
        "stb_image.h",
        "stb_image_write.h",
    ] + [":vk_templated"] + [":vk_templated_api"],
    copts = cc_copts(), #+ ["-flto"],
    #linkopts = ["-flto"],
    visibility = ["//visibility:public"],
    deps = [
        "//core/cc",
        "//gapis/capture:capture_cc_proto",
        "//gapis/api/vulkan/vulkan_pb:vulkan_pb_cc_proto",  # keep
        "//gapis/memory/memory_pb:memory_pb_cc_proto",
        ":descriptor_cc_proto",
        "//gapil/runtime/cc",
        "@com_google_protobuf//:protobuf",
    ],
)
